✨ feat(swagger): 整理接口返回值  增加认证 ApiKeyAuth
