# routers/api/v1/article.go
@@ -48,9 +48,11 @@ var MessagesForm = map[string]string{
 
 // 获取单个文章
 // @Summary 获取单个文章
+// @Security ApiKeyAuth
 // @Produce  json
 // @Param id path  int true "ID"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
 // @Router /api/v1/articles/{id} [get]
 func GetArticle(c *gin.Context) {
 	// 接收上下文
@@ -94,10 +96,13 @@ func GetArticle(c *gin.Context) {
 }
 
 // @Summary 获取多个文章
+// @Security ApiKeyAuth
 // @Produce  json
-// @Param tag_id query int false "TagId"
-// @Param state query int false "State"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Param tag_id body int false "TagID"
+// @Param state body int false "State"
+// @Param created_by body string false "CreatedBy"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
 // @Router /api/v1/articles [get]
 func GetArticles(c *gin.Context) {
 	appG := app.Gin{C: c}
@@ -160,14 +165,16 @@ func GetArticles(c *gin.Context) {
 
 // 新增文章
 // @Summary 新增文章
+// @Security ApiKeyAuth
 // @Produce  json
-// @Param tag_id query int true "TagId"
-// @Param title query string true "Title"
-// @Param desc query string false "Desc"
-// @Param content query string false "Content"
-// @Param created_by query string false "CreatedBy"
-// @Param state query int false "State"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Param tag_id body int true "TagID"
+// @Param title body string true "Title"
+// @Param desc body string true "Desc"
+// @Param content body string true "Content"
+// @Param created_by body string true "CreatedBy"
+// @Param state body int true "State"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
 // @Router /api/v1/articles [post]
 func AddArticle(c *gin.Context) {
 	var appG = app.Gin{C: c}
@@ -204,15 +211,17 @@ func AddArticle(c *gin.Context) {
 
 // 修改文章
 // @Summary 修改文章
+// @Security ApiKeyAuth
 // @Produce  json
 // @Param id path int true "ID"
-// @Param tag_id query int true "TagId"
-// @Param title query string true "Title"
-// @Param desc query string false "Desc"
-// @Param content query string false "Content"
-// @Param created_by query string false "CreatedBy"
-// @Param state query int false "State"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Param tag_id body string false "TagID"
+// @Param title body string false "Title"
+// @Param desc body string false "Desc"
+// @Param content body string false "Content"
+// @Param modified_by body string true "ModifiedBy"
+// @Param state body int false "State"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
 // @Router /api/v1/articles/{id} [put]
 func EditArticle(c *gin.Context) {
 	var appG = app.Gin{C: c}
@@ -261,9 +270,11 @@ func EditArticle(c *gin.Context) {
 
 // 删除文章
 // @Summary 删除文章
+// @Security ApiKeyAuth
 // @Produce  json
 // @Param id path int true "ID"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
 // @Router /api/v1/articles/{id} [delete]
 func DeleteArticle(c *gin.Context) {
 	appG := app.Gin{C: c}
